welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:25: error: too many arguments for method tache: ()Unit
		tache(2);
                     ^