welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	var y:Int=0

	def tache() {
		baisseBrosse();
		leveBrosse();
		avance();
	}

	def fgauche() {
		gauche();
		avance()
		gauche();
	}

	def fdroite() {
		droite();
		avance();
		droite();
	}

	for (x<-1 to 3) {
		avance();
		tache(2);
		fgauche();
		
	}
	
}
